Moved database to conf file

--- a/brandreth.conf
+++ b/brandreth.conf
@@ -1,6 +1,9 @@
 [Templates]
 Path="/home/derek/go/src/github.com/dgonyeo/brandreth2.0/"
 
+[Database]
+Url="postgres://brandreth:password@localhost/brandreth?sslmode=disable"
+
 [Admins]
 Name=dgonyeo
 Name=awpsys
